[tool.poetry]
name = "jazzy"
version = "0.1.2"
description = "Jazzy allows calculating a set of atomic/molecular descriptors including the Gibbs free energy of hydration (kJ/mol), its polar/apolar components, and the hydrogen-bond strength of donor and acceptor atoms."
authors = ["Gian Marco Ghiandoni <ghiandoni.g@gmail.com>", "Eike Caldeweyher <e.caldeweyher@gmail.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/AstraZeneca/jazzy"
repository = "https://github.com/AstraZeneca/jazzy"
documentation = "https://jazzy.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
Changelog = "https://github.com/AstraZeneca/jazzy/releases"

[tool.poetry.dependencies]
python = "^3.8.0"
click = "^8.0.4"
rdkit = "^2023.3.1"
kallisto = "^1.0.9"

[tool.poetry.group.optuna]
optional = true

[tool.poetry.group.optuna.dependencies]
optuna = {version = "3.4.0"}

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"
coverage = {extras = ["toml"], version = "^7.4"}
safety = "^2.3.5"
mypy = "^1.8"
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = "^1.0.0"}
sphinx = "^7.1.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^3.3.3"
flake8 = "^4.0.1"
black = "^22.1.0"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.4.25"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.3.0"
pep8-naming = "^0.13.2"
darglint = "^1.8.1"
reorder-python-imports = "^3.12.0"
pre-commit-hooks = "^4.3.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-click = "^5.1.0"
numpy = "^1.24.4"

[tool.poetry.scripts]
jazzy = "jazzy.__main__:cli"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["jazzy"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
